--- a/angular/core/components/sidebar/sidebar.scss
+++ b/angular/core/components/sidebar/sidebar.scss
@@ -4,10 +4,6 @@
   box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
 }
 
-.sidebar__threads, .sidebar__user {
-  // flex-basis: content;
-}
-
 .sidebar__list-item {
   min-height: 35px;
 }
@@ -31,7 +27,8 @@
 }
 
 .sidebar__list-item-icon {
-  margin-right: 20px;
+  width: 20px;
+  margin-right: 15px;
 }
 
 .sidebar__list-item-group-logo {
